fix overflow on text in clinics

--- a/components/clinic/clinic.css
+++ b/components/clinic/clinic.css
@@ -1,6 +1,5 @@
 .clinics {
    width: 100%;
-   max-width: 500px;
    display: flex;
    flex-direction: column;
    gap: 15px;
@@ -9,6 +8,7 @@
 .clinic {
    width: 100%;
    height: fit-content;
+   max-width: 500px;
    padding: 20px 15px;
    border: 1px solid #acacac;
    border-radius: 8px;
@@ -31,6 +31,15 @@
    aspect-ratio: 1;
    object-fit: cover;
    object-position: center;
+}
+
+.clinic .details {
+   width: 100%;
+}
+
+.clinic .details .email {
+   width: 100%;
+   word-break: break-all;
 }
 
 .clinic .details .actions {
